--- a/style.css
+++ b/style.css
@@ -34,19 +34,19 @@ body {
 .blockly-area {
   flex: 1;
   height: 100%;
-  background-color: #f00add;
+  background-color: #000000; /* Cor da lateral do terminal C++ ESBOÇO */
   position: relative;
 }
 
 .side-panel {
   width: 400px;
-  background-color: #1c1c1c;
+  background-color: #000000; /* Cor da lateral do terminal C++ ESBOÇO */
   padding: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   overflow-y: auto;
-  border-left: 2px solid #2d2d2d;
+  border-left: 2px solid #000000; /* cor da barria horizontal ao lado do terminal C++ */
 }
 
 button#generate-btn {
@@ -92,7 +92,7 @@ button#generate-btn:hover {
   background-color: #111;
   color: #00ff90;
   font-family: monospace;
-  border: 1px solid #555;
+  border: 1px solid #555555;
   padding: 5px;
   border-radius: 5px;
   resize: none;
@@ -101,13 +101,40 @@ button#generate-btn:hover {
 .plotter-box {
   width: 100%;
   height: 80px;
-  background-color: #111;
-  border: 1px solid #555;
+  background-color: #111111;
+  border: 1px solid #555555;
   border-radius: 5px;
   padding: 5px;
-  color: #999;
+  color: #999999;
   font-style: italic;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#startButton:hover {
+    background-color: #0056b3;  
+    transform: translateY(-2px);}
+
+#startButton {
+    background-color: #f107bf;  /* Cor do botão de Start do C++*/
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    font-size: 1.2em;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 4px 8px #f107bf(0, 123, 255, 0.3);}
+
+#startButton:active {
+    background-color: #004085;
+    transform: translateY(0);
+}
+
+#message {
+    margin-top: 25px;
+    font-size: 1.1em;
+    color: #28a745; /* Cor verde para sucesso */
+    font-weight: bold;
 }
