Comentarios para mudança de cor

--- a/src/renderer/view/index.html
+++ b/src/renderer/view/index.html
@@ -31,13 +31,13 @@
   </div>
 
   <xml id="toolbox" class="toolbox">
-    <category name="Lógica" colour="#5C81A6">
+    <category name="Lógica" colour="#5C81A6"> <!--Bloco Matematica e cor do index lateral -->
       <block type="controls_if"></block>
       <block type="logic_compare"></block>
       <block type="logic_operation"></block>
       <block type="logic_boolean"></block>
     </category>
-    <category name="Loops" colour="#5CA65C">
+    <category name="Loops" colour="#5CA65C"> <!-- Bloco Loops e cor do index lateral -->
       <block type="controls_repeat_ext">
         <value name="TIMES">
           <shadow type="math_number"><field name="NUM">10</field></shadow>
@@ -45,17 +45,17 @@
       </block>
       <block type="controls_whileUntil"></block>
     </category>
-    <category name="Matemática" colour="#5C68A6">
+    <category name="Matemática" colour="#5C68A6"> <!-- Bloco matematica e cor do index lateral-->
       <block type="math_number"><field name="NUM">0</field></block>
       <block type="math_arithmetic"></block>
     </category>
-    <category name="Texto" colour="#5CA68D">
+    <category name="Texto" colour="#5CA68D"><!--Bloco texto e cor do index lateral -->
       <block type="text"></block>
       <block type="text_print"></block>
     </category>
-    <category name="Variáveis" colour="#A65C81" custom="VARIABLE"></category>
-    <category name="Funções" colour="#9A5CA6" custom="PROCEDURE"></category>
-    <category name="Controle" colour="#FFAA00">
+    <category name="Variáveis" colour="#A65C81" custom="VARIABLE"></category> <!-- Bloco Variavel e cor do index lateral -->
+    <category name="Funções" colour="#9A5CA6" custom="PROCEDURE"></category> <!--Bloco Função e cor do index lateral-->
+    <category name="Controle" colour="#FFAA00"> <!-- Bloco Controle e cor do index lateral-->
       <block type="delay_block"></block>
       <block type="digital_write"></block>
       <block type="digital_read"></block>
